fix(editor): don't add `z-index` to edges

--- a/packages/frontend/editor-ui/src/app/styles/plugins/_vueflow.scss
+++ b/packages/frontend/editor-ui/src/app/styles/plugins/_vueflow.scss
@@ -88,10 +88,6 @@
 	}
 }
 
-.vue-flow__nodes:has(.bring-to-front) {
-	z-index: 2 !important;
-}
-
 /**
  * Handles
  */
@@ -117,8 +113,6 @@
 /**
  * Edges
  */
-
-.vue-flow__edges:has(.bring-to-front),
 .vue-flow__edge-label.selected {
 	z-index: 1 !important;
 }
